feat: update configuration and enhance random location generation

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-v: 3.3
-routeConfig: "HNroute.txt"
+v: 5.3
+routeConfig: "ZJGroute.txt"
 libimobiledeviceDir: "libimobiledevice"
 imageDir: "DeveloperDiskImage"
